fixing button alignment

--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -63,6 +63,9 @@ a:hover{
   color: #000000;
   text-decoration: none;
 }
+.text-center.blurb{
+  height: 100px;
+}
 #wrap {
   height: auto !important;
   height: 100%;
